--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'English literature'
 - !lcc 'PR'
+- GITenberg
 title: More Trivia
 url: http://www.gutenberg.org/ebooks/26733
